--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <!doctype html>
-
 <html>
-    <h1>HEYO</h1>
+<head><link rel="stylesheet" type="text/css" href="style.css"></head>
+<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+<div>
+<ul>
+    <li><a href=aboutme.html>about</a></li>
+    <li><a href=portfolio.html>portfolio</a></li><li><a href=index.html>home</a></li></ul>
+</div>
 
+<body>
+<div id="backgroundimage">
+    </div>
+</body>
+
+<h1>CASSANDRA HOWARD</h1>
 
 
 </html>
