--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 
 <head><link rel="stylesheet" type="text/css" href="style3.css"></head>
 
-<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
 <div>
 <ul>
@@ -11,14 +11,15 @@
     <li><a href=portfolio.html>portfolio</a></li><li><a href=index.html>home</a></li></ul>
 </div>
     
-<body class="body">
-
-<p></p>
-<div style="width:100%">   
-<div class="img1" display=""><img src="open%20detail%20stairs.jpg" width="400" height="auto"></div> 
+<body>
     
-<div class="img2" style= "float:right;"><img src="open%20detail%20stairs.jpg" width="400" height="auto"></div> 
-</div>  
+<a href="portfolio1.html"><img src="open%20detail%20stairs.jpg" alt="cubehouse" width="850" height="600"></a>
+<img src="Sendai%20Mediatheque%20test%20final.jpg" alt="sendaimediatheque" width="850" height="600">
+<img src="bone%20study.jpg" alt="bonestudy" width="850" height="600">
+<img src="open%20detail%20stairs.jpg" alt="cubehouse" width="850" height="600"> 
+<img src="open%20detail%20stairs.jpg" alt="cubehouse2" width="850" height="600">
+<img src="open%20detail%20stairs.jpg" alt="cubehouse3" width="850" height="600">    
+ 
 </body>
 
 
