--- a/portfolio1.html
+++ b/portfolio1.html
@@ -16,7 +16,8 @@
 <body> 
 <div id="break">   
 </div>
-<h1> cube house </h1><img src="open%20detail%20stairs.jpg" width="1200px" id="main">
+<h1> cube house </h1>
+<img src="open%20detail%20stairs.jpg" width="900px" id="main" height="auto">
 <div id="text">Project Description
 </div> 
     
