--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,7 @@
 
 <img src="12402019_561941863957011_4984353559559039118_o-2.jpg"/>
     
-<h1>about me</h1>   
+<h1>cassandra howard</h1>   
     
 <div id="text">first year architecture student
 <p>carnegie mellon university</p>
